script arguments handling (in progress)